zfs-linux (0.6.3-31-7d2868-wheezy) wheezy; urgency=low

   * Fix Vcs lines in control
     Thanx to rlaager for fix - #139

 -- Turbo Fredriksson <turbo@debian.org>  Sun, 22 Feb 2015 13:50:26 +0100

zfs-linux (0.6.3-30-7d2868-wheezy) wheezy; urgency=low

    * New upstream GIT tag.
    * Update Debian patches
    * Rename version.

 -- Turbo Fredriksson <turbo@debian.org>  Mon, 16 Feb 2015 17:36:17 +0100

zfs-linux (0.6.3-29~33b4de~wheezy) wheezy; urgency=low

    * Merge latest PR 2087 updates.

 -- Turbo Fredriksson <turbo@debian.org>  Sun, 08 Feb 2015 19:51:31 +0100

zfs-linux (0.6.3-28~33b4de~wheezy) wheezy; urgency=low

    * New upstream GIT tag.
    * Fix "/usr/bin/deb-systemd-helper: error: unable to read zfs.target"
    * Include the /etc/default/zfs file in the initrd.
    * Merge PR 3084 to get kernel 3.19 support.

 -- Turbo Fredriksson <turbo@debian.org>  Sat, 07 Feb 2015 22:36:50 +0100

zfs-linux (0.6.3-27~2c41df~wheezy) wheezy; urgency=low

    * New upstream GIT tag.

 -- Turbo Fredriksson <turbo@debian.org>  Sat, 31 Jan 2015 20:40:16 +0100

zfs-linux (0.6.3-26~2d9d57~wheezy) wheezy; urgency=low

    * New upstream GIT tag.

 -- Turbo Fredriksson <turbo@debian.org>  Sat, 20 Dec 2014 12:25:22 +0100

zfs-linux (0.6.3-25~c944be~wheezy) wheezy; urgency=low

    * Merge latest ZoL and PR 2087.

 -- Turbo Fredriksson <turbo@debian.org>  Mon, 08 Dec 2014 15:22:39 +0100

zfs-linux (0.6.3-24~7b2d78~wheezy) wheezy; urgency=low

    * Merge latest version of initrd scripts
      + Use /dev/disk/by-vdev before /dev/disk/by-*
    * Note that ZFS_INITRD_ADDITIONAL_DATASETS and ZFS_POOL_EXCEPTIONS
      is space separated.

 -- Turbo Fredriksson <turbo@debian.org>  Sun, 23 Nov 2014 23:31:07 +0100

zfs-linux (0.6.3-23~7b2d78~wheezy) wheezy; urgency=low

    * Add ZoL udev rules to zfsutils udeb.

 -- Turbo Fredriksson <turbo@debian.org>  Sun, 23 Nov 2014 23:31:07 +0100

zfs-linux (0.6.3-22~7b2d78~wheezy) wheezy; urgency=low

    * Add dh-systemd to build depends.